clean up and fix warning message