@@ -1,56 +1,51 @@
 package me.justeli.trim.api;
 
-import com.google.gson.JsonElement;
-import com.google.gson.JsonObject;
 import com.google.gson.JsonParser;
 import net.md_5.bungee.api.ChatColor;
 
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
+import java.net.URI;
 import java.net.URL;
-import java.net.URLConnection;
-import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
-/**
- * Created by Eli on April 29, 2021.
- * CreepersTrimGrass: me.justeli.trim.api
- */
+/* Eli @ April 29, 2021 (me.justeli.trim.api) */
 public class Util
 {
-    private static final Pattern rgbColor = Pattern.compile("(?<!\\\\)(&#[a-fA-F0-9]{6})");
+    private static final Pattern RGB_COLOR = Pattern.compile("(?<!\\\\)(&#[a-fA-F0-9]{6})");
 
     public static String color (String msg)
     {
         return ChatColor.translateAlternateColorCodes('&', parseRGB(msg));
     }
 
-    private static String parseRGB (String msg)
+    private static String parseRGB (String message)
     {
-        Matcher matcher = rgbColor.matcher(msg);
+        var matcher = RGB_COLOR.matcher(message);
         while (matcher.find())
         {
-            String color = msg.substring(matcher.start(), matcher.end());
+            String color = message.substring(matcher.start(), matcher.end());
             String hex = color.replace("&", "").toUpperCase();
-            msg = msg.replace(color, ChatColor.of(hex).toString());
-            matcher = rgbColor.matcher(msg);
+            message = message.replace(color, ChatColor.of(hex).toString());
+            matcher = RGB_COLOR.matcher(message);
         }
-        return msg;
+
+        return message;
     }
 
     public static String getLatestVersion (String githubRepo)
     {
         try
         {
-            URL url = new URL("https://api.github.com/repos/" + githubRepo + "/releases/latest");
-            URLConnection request = url.openConnection();
+            URL url = URI.create("https://api.github.com/repos/" + githubRepo + "/releases/latest").toURL();
+            var request = url.openConnection();
             request.connect();
 
-            JsonParser jp = new JsonParser();
-            JsonElement root = jp.parse(new InputStreamReader((InputStream) request.getContent()));
-            JsonObject rootobj = root.getAsJsonObject();
-            return rootobj.get("tag_name").getAsString();
+            JsonParser parser = new JsonParser();
+            return parser.parse(
+                new InputStreamReader((InputStream) request.getContent())
+            ).getAsJsonObject().get("tag_name").getAsString();
         }
         catch (IOException ex)
         {
